Fix z-index issue for popups

--- a/src/components/management/menuStyle.css
+++ b/src/components/management/menuStyle.css
@@ -63,7 +63,7 @@
 .mng-menu,
 .info-menu,
 .userProfile-menu {
-  z-index: 5;
+  z-index: 15;
   display: flex;
   flex-direction: column;
   width: fit-content;
